--- a/my-react-website/package.json
+++ b/my-react-website/package.json
@@ -2,7 +2,7 @@
   "name": "my-react-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/AartiDashore/AartiDashoreWebsite.git"
+  "homepage": "https://github.com/AartiDashore/AartiDashoreWebsite"
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
